2011-03-06 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* config/config.initialize.m: add missing include to fix build.
	Use correct thread handles, adapt sleep times to worst case.
	Remove C99-ism.

2011-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: remove obsolete call to objc_set_thread_callback().
	* Source/NSDebug.m: Try to improve getting return addresses from stack.

2011-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInternal.h:
	* Source/NSDateFormatter.m:
	* Source/NSNumberFormatter.m:
	* Headers/Foundation/NSPortCoder.h:
	* Headers/Foundation/NSCache.h:
	* Headers/Foundation/NSSpellServer.h:
	* Headers/Foundation/NSDecimalNumber.h:
	* Headers/Foundation/NSBundle.h:
	* Headers/Foundation/NSTimer.h:
	* Headers/Foundation/NSScanner.h:
	* Headers/Foundation/NSDistributedNotificationCenter.h:
	* Headers/Foundation/NSComparisonPredicate.h:
	* Headers/Foundation/NSUndoManager.h:
	* Headers/Foundation/NSDateFormatter.h:
	* Headers/Foundation/NSAutoreleasePool.h:
	* Headers/Foundation/NSUserDefaults.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSThread.h:
	* Headers/Foundation/NSHost.h:
	* Headers/Foundation/NSRegularExpression.h:
	* Headers/Foundation/NSKeyedArchiver.h:
	* Headers/Foundation/NSProtocolChecker.h:
	* Headers/Foundation/NSError.h:
	* Headers/Foundation/NSPortMessage.h:
	* Headers/Foundation/NSFileHandle.h:
	* Headers/Foundation/NSDistributedLock.h:
	* Headers/Foundation/NSPort.h:
	* Headers/Foundation/NSSortDescriptor.h:
	* Headers/Foundation/NSLocale.h:
	* Headers/Foundation/NSTask.h:
	* Headers/Foundation/NSArchiver.h:
	* Headers/Foundation/NSInvocation.h:
	* Headers/Foundation/NSFileManager.h:
	* Headers/Foundation/NSNumberFormatter.h:
	* Headers/Foundation/NSPortNameServer.h:
	* Headers/Foundation/NSXMLParser.h:
	* Headers/Foundation/NSIndexPath.h:
	* Headers/Additions/GNUstepBase/GSMime.h:
	Tweaks for running in a garbage collecting environment.

2011-03-05  Richard Frith-Macdonald <rfm@gnu.org>
